KeyMaker api enabled

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,11 @@
-[MySql]
-jars = \jar_files\mysql-connector-java-8.0.22.jar
+[MYSQL]
+JARS = \jar_files\mysql-connector-java-8.0.22.jar
 URL = jdbc:mysql://localhost:3306/
 DB_DRIVER = com.mysql.cj.jdbc.Driver
 DB_USER = root
 
-[MongoDB]
-jars = None
+[MONGODB]
+JARS = None
 URL = jdbc:mysql://localhost:3306/
 DB_USER = ihub
 
@@ -13,7 +13,9 @@ DB_USER = ihub
 EMAIL_FROM = amar.kadam@clairvoyantsoft.com
 EMAIL_TO_LIST = amar.kadam@clairvoyantsoft.com
 
-[Common]
-env = local
-send_email = true
-load_data = true
+[COMMON]
+KEYMAKER_API=http://127.0.0.1:5000/key/
+ENV = local
+SEND_EMAIL = true
+LOAD_DATA = true
+READ_KEY_FROM = api
