--- a/bin/run_data_mapper.ini
+++ b/bin/run_data_mapper.ini
@@ -1,6 +1,18 @@
 [PARAMETERS]
 source= MySql
 target= MySql
+source_db= cvdb
+target_db= cvdb
+source_table= stable
+target_table= dtable1
+id_column= student_id
+job_type= auto
+column_percentage= 90
+
+
+[PARAMETERS_BACKUP]
+source= MySql
+target= MySql
 source_db= datamapper_db_source
 target_db= datamapper_db_targ
 source_table= employee_src:dept_id&department_src:dept_id&project_src:project_id,actor_src,address_src,city_src
